[gd_scene load_steps=11 format=3 uid="uid://cd2m4d576ux7"]

[ext_resource type="Script" uid="uid://3u0u0hmpfwcp" path="res://Scripts/UI/main_menu.gd" id="1_gvx18"]

[sub_resource type="Gradient" id="Gradient_erv1k"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.485714)
colors = PackedColorArray(0.235294, 0.235294, 0.235294, 1, 0.793365, 0.540502, 1.54018e-06, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_28flt"]
noise_type = 5
seed = 1
frequency = 0.0251
fractal_octaves = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_37pjl"]
width = 1152
height = 648
generate_mipmaps = false
seamless = true
color_ramp = SubResource("Gradient_erv1k")
noise = SubResource("FastNoiseLite_28flt")

[sub_resource type="AtlasTexture" id="AtlasTexture_1ehe0"]
atlas = SubResource("NoiseTexture2D_37pjl")

[sub_resource type="Gradient" id="Gradient_48xlc"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.18251, 0.48289, 0.524715, 0.942966)
colors = PackedColorArray(0.207843, 0.501961, 0.0745098, 1, 0, 0.658824, 0.392157, 1, 0.905882, 0.709804, 0.384314, 1, 0.396078, 0.639216, 1, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_1ehe0"]
noise_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ce3w2"]
height = 100
color_ramp = SubResource("Gradient_48xlc")
noise = SubResource("FastNoiseLite_1ehe0")

[sub_resource type="Gradient" id="Gradient_n45e2"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.924901)
colors = PackedColorArray(0.905232, 0.812567, 0.956667, 1, 0.376471, 0.117647, 0.529412, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_opfnp"]
gradient = SubResource("Gradient_n45e2")
width = 100
height = 100
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[node name="CenterContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gvx18")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Parallax2D" type="Parallax2D" parent="CenterContainer"]
repeat_size = Vector2(1152, 648)
autoscroll = Vector2(-30, 0)
repeat_times = 3

[node name="TextureRect" type="TextureRect" parent="CenterContainer/Parallax2D"]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_1ehe0")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.709804, 0.207843, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_colors/font_outline_color = Color(0.0745098, 0.0470588, 0.00392157, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 75
text = "Game"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Exit"

[node name="Control" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -94.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 2
texture = SubResource("NoiseTexture2D_ce3w2")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_opfnp")

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.995739, 0.567824, 1, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_font_sizes/font_size = 30
text = "Made by:"
horizontal_alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label2" type="Label" parent="Control/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.900582, 0.190518, 1)
theme_override_constants/shadow_offset_y = 10
text = "FrozenDev
karol"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Control/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 0.192157, 1)
theme_override_constants/shadow_offset_y = 10
text = "Lucas
Droid"

[node name="Label4" type="Label" parent="Control/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 0.192157, 1)
theme_override_constants/shadow_offset_y = 10
text = "Neferthyt_o
Krishna"

[node name="Label4" type="Label" parent="Control/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 0.192157, 1)
theme_override_constants/shadow_offset_y = 10
text = "Ray"
horizontal_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
